# vrmagic_stereo_ros

./: .gitignore  CMakeLists.txt  LICENSE  package.xml
arduino/: driftcam.ino
include/vrmagic_driftcam/: api_handle.h  camera_handle.h  demo.h  iserial_port.h  serial_port.h
include/vrmagic_stereo_ros/: api_handle.h  camera_handle.h
launch/: vrmagic_stereo_ros.launch
scripts/: infinite_watchman.sh
src/: api_handle.cpp  camera_handle.cpp  initcamera.cpp  main.cpp  readcamera.cpp  sdlwindow.cpp  serial_port.cpp
srv/: StartAcquisition.srv
